--- a/BC/package.json
+++ b/BC/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bc",
   "version": "1.0.0",
-  "description": "",
+  "description": "This project demonstrates a basic Hardhat use case. It comes with a sample contract, a test for that contract, and a script that deploys that contract.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,9 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "hardhat": "^2.14.1"
+    "@openzeppelin/contracts": "^5.0.0",
+    "anon-aadhaar-contracts": "^0.1.14",
+    "dotenv": "^16.3.1",
+    "hardhat": "^2.14.1",
+    "hardhat-dependency-compiler": "^1.1.3"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.1.8",
     "@nomiclabs/hardhat-waffle": "^2.0.5"
+  },
+  "directories": {
+    "test": "test"
   }
 }
