--- a/FE/package.json
+++ b/FE/package.json
@@ -1,16 +1,27 @@
 {
-  "name": "mixer",
-  "version": "0.1.0",
-  "private": true,
+  "name": "fe",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "next": "14.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@apollo/client": "^3.8.8",
+    "axios": "^1.6.2",
+    "crypto-js": "^4.2.0",
+    "ethers": "^5.7.2",
+    "graphql": "^16.8.1",
+    "js-sha256": "^0.10.1",
+    "merkletreejs": "^0.3.11",
+    "next": "^13.4.9",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
