--- a/FE/package.json
+++ b/FE/package.json
@@ -13,7 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@alchemy/aa-accounts": "^1.2.0",
+    "@alchemy/aa-alchemy": "^1.2.0",
     "@apollo/client": "^3.8.8",
+    "anon-aadhaar-react": "^0.1.13",
     "axios": "^1.6.2",
     "crypto-js": "^4.2.0",
     "ethers": "^5.7.2",
