--- a/BE/package.json
+++ b/BE/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "anon-aadhaar-pcd": "^0.1.14",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ethers": "^5.6.1",
