--- a/FE/package.json
+++ b/FE/package.json
@@ -16,6 +16,7 @@
     "@alchemy/aa-accounts": "^1.2.0",
     "@alchemy/aa-alchemy": "^1.2.0",
     "@apollo/client": "^3.8.8",
+    "anon-aadhaar-pcd": "^0.1.14",
     "anon-aadhaar-react": "^0.1.13",
     "axios": "^1.6.2",
     "crypto-js": "^4.2.0",
